@@ -2,6 +2,10 @@ Security
 --------
 - fix a rare case of zones incorrectly dowgraded to insecure status
 
+Bugfixes
+--------
+- avoid turning off qname minimization in some cases, e.g. co.uk. (#339)
+
 
 Knot Resolver 2.3.0 (2018-04-23)
 ================================
